<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/lblAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/txtOpciones" />

    <Button
        android:id="@+id/btnNuevoUsuario"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_below="@+id/lblAlumno"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnNewUser" />

    <Button
        android:id="@+id/btnTodosUsuarios"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btnNuevoUsuario"
        android:layout_margin="2dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnVerUsers" />

    <Button
        android:id="@+id/btnModificaUsuario"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnTodosUsuarios"
        android:layout_margin="2dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnModifUser" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btnModificaUsuario"
        android:layout_margin="2dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnCerrar" />

    <Button
        android:id="@+id/btnVerFavoritos"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_below="@+id/btnCerrarSesion"
        android:layout_margin="2dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnFavoritos" />

    <TextView
        android:id="@+id/lblProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnVerFavoritos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txtProductos"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonNewProducto"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_below="@+id/lblProductos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnNewProducto" />

    <Button
        android:id="@+id/buttonVerProductosUsuario"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonNewProducto"
        android:layout_margin="2dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnVerProductosUsuario" />

    <Button
        android:id="@+id/buttonVerProductosCategoria"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonVerProductosUsuario"
        android:layout_margin="2dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnVerProductosCategoria" />

    <Button
        android:id="@+id/buttonModifProductos"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonVerProductosCategoria"
        android:layout_margin="2dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnModifProductos" />

    <Button
        android:id="@+id/buttonMuestraProductos"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonModifProductos"
        android:layout_margin="2dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/txtMuestraProd" />


</RelativeLayout>