<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtContrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnRegistrar" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegistrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/btnLogin" />

</RelativeLayout>
